--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
             <!-- Heading -->
             <h1 class="display-3 text-center text-md-left">
-              Welcome to <span class="text-primary">Landkit</span>. <br>
+              Welcome to <span class="text-primary">The Company X Website</span>. <br>
               Develop anything.
             </h1>
 
