--- a/src/careers.html
+++ b/src/careers.html
@@ -367,7 +367,7 @@
 
             <!-- Text -->
             <p class="font-size-sm text-muted mb-0">
-              User experience and design are top priorities at Landkit.
+              User experience and design are top priorities at "The Company X".
             </p>
 
           </div>
