--- a/src/help-center.html
+++ b/src/help-center.html
@@ -32,7 +32,7 @@
 
             <!-- Text -->
             <p class="lead text-white-75 mb-0">
-              We're here to help you better use Landkit. First, let's figure out if we have a solution in our documentation.
+              We're here to help you better use "The Company X". First, let's figure out if we have a solution in our documentation.
             </p>
 
           </div>
@@ -314,7 +314,7 @@
 
             <!-- Text -->
             <p class="font-size-lg text-muted mb-7 mb-md-9">
-              Contact us and we'll get back to you as soon as possible with a solution to whatever issues you're having with Landkit.
+              Contact us and we'll get back to you as soon as possible with a solution to whatever issues you're having with "The Company X".
             </p>
 
           </div>
