--- a/src/index.html
+++ b/src/index.html
@@ -316,12 +316,12 @@
             <!-- Heading -->
             <h2>
               We have lots of experience <br>
-              <span class="text-primary">building Bootstrap themes</span>.
+              <span class="text-primary">building Bootstrap Websites</span>.
             </h2>
 
             <!-- Text -->
             <p class="font-size-lg text-muted mb-6">
-              We've built well over a dozen Bootstrap themes and sold tens of thousands of copies.
+              We've built well over a dozen Bootstrap websites.
             </p>
 
             <!-- List -->
@@ -500,7 +500,7 @@
 
                           <!-- Text -->
                           <p class="mb-5 mb-md-7">
-                            “I've never used a theme as versatile and flexible as Landkit. It's my go to for building landing sites on almost any project.”
+                            “I've never used a theme as versatile and flexible as "The Company X". It's my go to for building landing sites on almost any project.”
                           </p>
 
                           <!-- Footer -->
@@ -767,7 +767,7 @@
               </div>
 
               <!-- Button -->
-              <a href="#!" class="card-btn btn btn-block btn-lg btn-light bg-gray-300 text-gray-700">
+              <a href="mailto:soufiane.fellahi14@gmail.com?subject=information request" class="card-btn btn btn-block btn-lg btn-light bg-gray-300 text-gray-700">
                 Contact us
               </a>
 
@@ -920,8 +920,8 @@
             </p>
 
             <!-- Button -->
-            <a href="https://themes.getbootstrap.com/product/landkit/" target="_blank" class="btn btn-success lift">
-              Buy it now <i class="fe fe-arrow-right"></i>
+            <a href="mailto:soufiane.fellahi14@gmail.com?subject=information request" target="_blank" class="btn btn-success lift">
+              Contact us<i class="fe fe-arrow-right"></i>
             </a>
 
           </div>
