--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
               <a href="overview.html" class="btn btn-primary shadow lift mr-1">
                 View all pages <i class="fe fe-arrow-right d-none d-md-inline ml-3"></i>
               </a>
-              <a href="docs/index.html" class="btn btn-primary-soft lift">
-                Documentation
+              <a href="" class="btn btn-primary-soft lift">
+                Documentation (WIP)
               </a>
             </div>
 
@@ -187,7 +187,7 @@
             <!-- Heading -->
             <h2>
               The most useful resource <br>
-              <span class="text-success">ever created for <span data-toggle="typed" data-options='{"strings": ["developers.", "Buibui et mantao.", "designers."]}'></span></span>
+              <span class="text-success">ever created for <span data-toggle="typed" data-options='{"strings": ["developers.", "designers."]}'></span></span>
             </h2>
 
             <!-- Text -->
